2008-10-25 18:40-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Version: 1.2.6
	
2008-10-22 22:30-EDT Wolfgang Lux <wolfgang.lux@gmail.com>
	Patch committed by: Gregory John Casamento <greg_casamento@yahoo.com>

	* GormLib/IBObjectAdditions.m: Remove duplicate method implementations
	from here to fix issues on Darwin.

2008-10-19 21:50-EDT Wolfgang Lux <wolfgang.lux@gmail.com>
	Patch committed by: Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGenericEditor.h
	* GormCore/GormGenericEditor.m
	* GormCore/GormImageEditor.m
	* GormCore/GormObjectEditor.m
	* GormCore/GormSoundEditor.m: Observe notification IBWillCloseDocument
	and remove the reference to the document when that is recieved to 
	avoid a crash.
	* Resources/ClassInformation.plist: Add outlet for delegate to
	NSSplitView.

2008-10-06 19:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/ControlsPalette.m: Correct sizing issue with
	Controls Palette.

2008-09-27 23:11-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormPrefs/GormPluginsPref.m: Include GormPluginManager.h to
	eliminate compiler warning.

2008-09-27 23:02-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormPreferences.gorm
	* English.lproj/GormPrefPlugins.gorm
	* GNUmakefile
	* GormCore/GormPluginManager.m
	* GormPrefs/GNUmakefile
	* GormPrefs/GormPalettesPref.h
	* GormPrefs/GormPluginsPref.h
	* GormPrefs/GormPluginsPref.m
	* GormPrefs/GormPrefController.h
	* GormPrefs/GormPrefController.m: Changes to allow addition of 
	plugins by users.

2008-09-27 21:10-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormPalettesManager.h
	* GormCore/GormPalettesManager.m: Reverted the previous change to the 
	palettes manager.  

2008-09-06 16:12-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GNUmakefile: Added GNUSTEP_INSTALLATION_DOMAIN
	* GormCore/GormCustomView.m: Reverted previous change.  Need to