@@ -11,5 +11,5 @@ GNUSTEP_CORE_VERSION=0.13.0
 # The version number of this release.
 MAJOR_VERSION=1
 MINOR_VERSION=2
-SUBMINOR_VERSION=6
+SUBMINOR_VERSION=7
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${SUBMINOR_VERSION}
